# fastbook

./: 01_intro.ipynb  02_production.ipynb  04_mnist_basics.ipynb  05_pet_breeds.ipynb  06_multicat.ipynb  pyproject.toml
