[tool.poetry]
name = "fastbook"
version = "0.1.0"
description = "Poetry environment to work through the FastAI book"
authors = ["Aaron W Chen <awc33@cornell.edu>"]
readme = "README.md"
packages = [{include = "practical_deep_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
nbdev = "^2.3.12"
ipykernel = "^6.24.0"
jupyter = "^1.0.0"
fastai = "^2.7.12"
transformers = "^4.30.2"
gradio = "^3.36.1"
torch = { version = "2.0.1", source="torch"}
torchaudio = { version = "2.0.2", source="torch"}
torchvision = { version = "0.15.2", source="torch"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
